[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Scripts/Experimental/Card Experiment.gd" type="Script" id=1]
[ext_resource path="res://Game/Assets/Images/Experimental/sample.png" type="Texture" id=2]
[ext_resource path="res://Game/Assets/Images/Experimental/secondSample.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 53, 51 )

[node name="Card" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="sample" type="Sprite" parent="Sprite"]
position = Vector2( -1, -1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]

[node name="secondSample" type="Sprite" parent="Sprite2"]
position = Vector2( -1.20572, -16.6205 )
scale = Vector2( 0.536733, 0.371916 )
texture = ExtResource( 3 )

[node name="name" type="Label" parent="."]
margin_left = -51.0
margin_top = -50.0
margin_right = -14.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description" type="Label" parent="."]
margin_left = -42.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 43.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
